css/style.css
html, body{
    padding: 0;
    margin: 0;
}
.container-fluid{
    padding: 0;
}
.site{
    width: 100%;
    margin: 0;
    background-color: black;
    font-weight: bolder;
}
.row{
     margin: 0;
 }
/*header*/

#header{
    position: fixed;
    z-index: 1;
    width: 100%;
}
.main-header{
    overflow: hidden;
    background-color: black;
    margin: auto;
}
.logo{
    max-width: 100%;
    display: inline-block;
    width: 38%;
    padding: 22px;
}
.contact{
    float: right;
    font-size: 0.75em;
    color: white;
    margin-right: 2%;
    display: block;
    margin-top: 20px;
}
.home{
    width: 100%;
    margin: 0 auto;
}
/*navigation*/
.main-nav{
    margin-top: -53px;
    margin-left: 62%;
}
ul.nav{
    list-style-type: none;
    position: fixed;

}

li.nav{
    float: left;
    margin: 1%;

}
.btn {
    color: white;
    font-size: 12px;
    font-weight: bolder;
}
.btn.active{

}
.btn:hover{
    color: white;
    border-bottom: 2px solid red;
}
.carousel{
    background: #2f4357;
}
.carousel .item img{
    margin: 0 auto; /* Align slide image horizontally center */
}
.images{
    width: 100%;
}
/*Services Section*/

.services-sector{
    background: url('../images/servicesBackground.jpg') no-repeat center center;
    padding-top: -20px;
    margin: auto;
}
.services-group{
    text-align: center;
    max-width: 1200px;
    margin: auto;
}
.services-title{
    margin-left: 40%;
    padding-top: 40px;
    padding-bottom: 30px;
    display: block;
}
.car-logos{
     margin: 10px auto 20px;
     display: block;
 }
.services-headline{
    margin-left: 22%;
    padding-top: 10px;
    width: 55%;
    padding-bottom: 10px;
    display: block;
}
.sg-service1{
    display: block;
    background-color: gray;
    color: white;
    text-align: left;
    padding: 4px;
}
.sg-service2{
    display: block;
    background-color: darkslategray;
    color: white;
    text-align: left;
    padding: 4px;
}
.sg-title{
    color: white;
    margin-bottom: 0;
    margin-top: 25px;
    padding:4px;
    text-align: center;
    background-color: red;
}
.service-bullet{
    margin-top: 65px;
    margin-bottom: 25px;
    clear: both;
    margin-left: 2%;
}
.contact-sector {
    background: url('../images/locationBackground.jpg') no-repeat center center;
    color: white;
    font-weight: bold;
    padding-top: -20px;
    margin: 0 auto;
}
.story-content{
    font-size: 1.25em;
    padding: 20px
    color: white;
    text-align: center;
}
.contact-header{
    margin-left: 40%;
    padding-top: 25px;
    padding-bottom: 45px;
    display: block;
}
.contact-titles{
    font-size: 30px;
    color: white;
    text-align: left;
    display: block;
    margin-left: 5%;
    margin-top: 3%;
}
.contact-info{
    font-size: 20px;
    color: white;
    text-align: left;
    display: block;
    margin-left: 6%;
    margin-top: 1%;
    margin-bottom: 5%;
}
.contact-content{
    display: inline-block;
    width: 50%;
}
.get-location{
    display: inline-block;
    width: 50%;
    float: right;
}
.get-directions{
    margin-top: 20%;
    margin-left: 10%;
}
.story-title{
    margin-left: 40%;
    padding-top: 25px;
    padding-bottom: 45px;
}
.our-story-sector{
    background-color: black;
    max-width: 1200px;
    margin: auto;
}

.content{
    padding: 14px;
}
.story-content{
    color: white;
    font-size: 15px;
    -webkit-column-count: 3;
    text-align: left;
    margin: 15px;
}
#story{
    position: relative;
    z-index: 0;
}
.footer-content{
    margin: auto;
    display: block;

}
.footer{
    background-color: black;

}
#footer{
    position: fixed;
    z-index: 1;
    bottom: 0;
    left: 0;
    width: 100%;
}

